Implements class-based OOP

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<link rel="stylesheet" href="/css/todo.css">
 
+		<script type="text/javascript" src="/js/todoOOP.js" defer></script>
 		<script type="text/javascript" src="/js/todo.js" defer></script>
 	</head>
 	<body>
